--- a/apps/bfd-data-utilities-npi-org/pom.xml
+++ b/apps/bfd-data-utilities-npi-org/pom.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>gov.cms.bfd.data.utilities.NPIOrg</groupId>
+	<groupId>gov.cms.bfd.server.data.utilities.NPIApp</groupId>
 	<artifactId>bfd-data-utilities-npi-org</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
