--- a/ops/ansible/playbooks-ccs/vars/test/group_vars/all/env_specific.yml
+++ b/ops/ansible/playbooks-ccs/vars/test/group_vars/all/env_specific.yml
@@ -47,7 +47,7 @@ data_server_ssl_client_certificates:
     certificate: "{{ lookup('file', 'files/client_data_server_performance_tester_certificate.pem') }}"
 
 # Enables the CCW RIF job when true; disables when false
-data_pipeline_ccw_rif_job_enabled: true
+data_pipeline_ccw_rif_job_enabled: false
 
 # Enables the RDA API data pipline with a 1 hour retry interval.
 data_pipeline_rda_job_enabled: true
