--- a/apps/.gitignore
+++ b/apps/.gitignore
@@ -8,3 +8,7 @@
 # Ignore NetBeans settings files
 **/nb-configuration.xml
 **/nbactions.xml
+
+bluebutton-data-pipeline-*
+bluebutton-local-*
+dependencies
