BFD-XXXX: Update bfd-cbc-build image with yq

--- a/ops/jenkins/bfd-cbc-build/Dockerfile
+++ b/ops/jenkins/bfd-cbc-build/Dockerfile
@@ -1,6 +1,7 @@
 ARG PACKER_VERSION
 ARG JAVA_VERSION
 ARG MAVEN_VERSION
+ARG YQ_VERSION
 
 FROM maven:${MAVEN_VERSION}-openjdk-${JAVA_VERSION} AS base
 
@@ -20,11 +21,14 @@ COPY tfenv-install.sh /root/tfenv-install.sh
 RUN chmod +x /root/tfenv-install.sh && \
     /root/tfenv-install.sh "${TFENV_REPO_HASH}" "${TFENV_VERSIONS}"
 
-# declaring `packer` stage here allows us to inject `PACKER_VERSION` unlike `COPY --from` below
+# declaring `packer` and `yq` stages here allows us to inject specific versions for `COPY --from` use in `dist` below
 FROM hashicorp/packer:${PACKER_VERSION} as packer
+FROM mikefarah/yq:${YQ_VERSION} as yq
 
 FROM base as dist
 ENV PATH="/root/.tfenv/bin:${PATH}"
+# COPY yq binary
+COPY --from=yq /usr/bin/yq /usr/bin/yq
 # COPY tfenv files
 COPY --from=tfenv /root/.tfenv /root/.tfenv
 # Copy packer files
